--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -112,6 +112,7 @@
     \item mention/describe the arithmetic simplification code
     \item (in Fig. 1) Crane2 doesn't use Crane, it uses itself
     \item describe which compilation rules are currently greedy or non-greedy
+    \item my agenda has a plan for proving completeness for $\mathbf{C}^{2}$
   \end{itemize}
 }
 
@@ -165,6 +166,8 @@
                 all rules are applied in a greedy manner, we still assume that
                 greedy rules will be applied before non-greedy rules.
         \end{itemize}
+  \item In particular, independent partial groundings and atom counting are the
+        two classical rules that require the formula to be shattered.
   \end{enumerate}
 
 \begin{figure*}[t]
