The beginnings of some data-plotting code

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -238,8 +238,13 @@ equations.
         compiled and executed to obtain numerical values (see \cref{sec:cpp}).
   \item Support for infinite precision integers using the GNU Multiple Precision
         Arithmetic Library.
-  \item The experiments are (going to be) more comprehensive than any other
-        experimental study performed on (W)FOMC algorithms.
+  \item A new set of benchmarks.
+  \item The experiments for Crane and ForcLift are (going to be) more
+        comprehensive than any other experimental study performed on (W)FOMC
+        algorithms.
+  \item Some experiments vs FastWFOMC
+  \item A proof of correctness
+  \item A proof of completeness
 \end{itemize}
 
 \todo[inline]{references to my previous paper and some of the \textsc{ForcLift}
